# AnalystGPT

./: README.md  chat_ui.py  pyproject.toml
src/: main.py
src/agents/: react_agent.py
src/tools/: get_api_data.py  get_excel_data.py  get_financials.py
